clang/test/BSC/Negative/Trait/r3/first_param_not_This/first_param_not_This.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(int a); // expected-error {{the first parameter of _Trait member function must be 'This* this'}}
};